--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 <!-- part 3 -->
 
     <div id="formDiv" name="formDiv">
+        <img src="img/formbg.png" alt="" style="display: none;">
         <form action="post">
             <pre>
                 Provide contact information
