--- a/index.html
+++ b/index.html
@@ -94,7 +94,14 @@
 
 <!-- part 3 -->
 
-    <div id="formDiv" name="formDiv">
+    <div id="formDiv" name="formDiv" style="
+        background: url(img/formbg.png);
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size: 80vw;
+        background-position: 15vw -15vw;
+        ">
+        
         <img src="img/formbg.png" alt="" style="display: none;">
         <form action="post">
             <pre>
