--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
         </div>
 
     </footer>
-
+    
+<link rel="stylesheet" type="text/css" href="css/form.css">
 <script src="js/header.js" type="text/javascript"></script>
 
 </body>
